# rust-fullstack

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/cmd/: api.rs  html.rs  mod.rs
src/presentation/api/: server.rs
src/presentation/html/: server.rs
src/presentation/html/home/: package-lock.json  package.json
